--- a/packages/web-platform/web-tests/tests/web-elements/x-input/event-input-number-dot.html
+++ b/packages/web-platform/web-tests/tests/web-elements/x-input/event-input-number-dot.html
@@ -35,8 +35,7 @@
     <x-view class="page">
       <x-input
         id="target"
-        value="hello"
-        style="height:50px; width:200px;border: 1px;"
+        style="height:50px; width:200px;border-width: 1px;"
         type="number"
       ></x-input>
     </x-view>
