--- a/packages/web-platform/web-tests/tests/web-elements/performance/raw-text-3000.html
+++ b/packages/web-platform/web-tests/tests/web-elements/performance/raw-text-3000.html
@@ -21,14 +21,11 @@ LICENSE file in the root directory of this source tree. -->
     />
     <script type="module">
     const top = document.createElement('div');
-    queueMicrotask(() => {
-      for (let ii = 0; ii < 10000; ii++) {
-        const text = document.createElement('x-text');
-        text.innerText = 'hello lynx';
-        top.append(text);
-      }
-    });
-    document.body.append(top);
+    const htmlTokens = [];
+    for (let ii = 0; ii < 3000; ii++) {
+      htmlTokens.push('<x-text><raw-text text="hello lynx"></raw-text></x-text>');
+    }
+    document.body.innerHTML = htmlTokens.join('');
     </script>
     <style>
     x-view {
