fix: fork @vant/touch-emulator and make it work with shadowroot
https://github.com/youzan/vant/issues/13464

--- a/packages/web-platform/web-explorer/index.html
+++ b/packages/web-platform/web-explorer/index.html
@@ -10,6 +10,7 @@
     <title>Lynx Explorer on Web Platform</title>
     <script src="https://www.unpkg.com/@vant/touch-emulator@1.4.0/dist/index.js"></script>
     <script type="module" src="./dist/static/js/index.js"></script>
+    <script type="module" src="preinstalled/vant-touch.js"></script>
     <style>
     #install-button {
       position: fixed;
