--- a/packages/web-platform/web-explorer/index.html
+++ b/packages/web-platform/web-explorer/index.html
@@ -6,11 +6,9 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="icons/icon-128x128.png">
-    <link rel="stylesheet" href="dist/static/css/index.css">
     <title>Lynx Explorer on Web Platform</title>
     <script type="module" src="https://unpkg.com/qr-scanner@1.4.2"></script>
-    <script type="module" src="preinstalled/vant-touch.js"></script>
-    <script type="module" src="./dist/static/js/index.js"></script>
+    <script type="module" src="../preinstalled/vant-touch.js"></script>
     <style>
     #install-button {
       position: fixed;
