--- a/packages/web-platform/web-tests/tests/web-elements/x-input/attribute-autocomplete.html
+++ b/packages/web-platform/web-tests/tests/web-elements/x-input/attribute-autocomplete.html
@@ -34,6 +34,7 @@
     <script src="/web-elements.js" defer></script>
     <x-view class="page">
       <x-input
+        id="target"
         autocomplete="username"
         style="height: 50px; width: 200px"
       ></x-input>
